--- a/basic-mvt/templates/auth/auth.templ
+++ b/basic-mvt/templates/auth/auth.templ
@@ -1,6 +1,6 @@
 package auth
 
-templ LoginView() {
+templ LoginView(csrf string) {
 	<div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
 		<div class="sm:mx-auto sm:w-full sm:max-w-sm">
 			<img class="mx-auto h-10 w-auto" src="https://tailwindui.com/img/logos/mark.svg?color=indigo&amp;shade=600" alt="Your Company"/>
@@ -8,6 +8,7 @@ templ LoginView() {
 		</div>
 		<div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
 			<form class="space-y-6" hx-post="/login">
+				<input type="hidden" name="_csrf" value={ csrf }/>
 				<div>
 					<label for="email" class="block text-sm font-medium leading-6 text-gray-900">Email address</label>
 					<div class="mt-2">
@@ -37,7 +38,7 @@ templ LoginView() {
 	</div>
 }
 
-templ SignUpView() {
+templ SignUpView(csrf string) {
 	<div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
 		<div class="sm:mx-auto sm:w-full sm:max-w-sm">
 			<img class="mx-auto h-10 w-auto" src="https://tailwindui.com/img/logos/mark.svg?color=indigo&amp;shade=600" alt="Your Company"/>
@@ -45,6 +46,7 @@ templ SignUpView() {
 		</div>
 		<div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
 			<form class="space-y-6" hx-post="/signup">
+				<input type="hidden" name="_csrf" value={ csrf }/>
 				<div>
 					<label for="email" class="block text-sm font-medium leading-6 text-gray-900">Email address</label>
 					<div class="mt-2">
